--- a/Multicollinearity/Condition Number and Variance Decomposition.ipynb
+++ b/Multicollinearity/Condition Number and Variance Decomposition.ipynb
@@ -21,7 +21,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5659/4012704369.py:26: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed two minor releases later. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap(obj)`` instead.\n",
+      "/tmp/ipykernel_201162/4012704369.py:26: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed two minor releases later. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap(obj)`` instead.\n",
       "  TD_colors = plt.cm.get_cmap('flag', 20) #Paired, flag\n"
      ]
     }
@@ -136,7 +136,7 @@
        "  <th>Date:</th>             <td>Tue, 23 May 2023</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>10:47:44</td>     <th>  Log-Likelihood:    </th> <td>  1142.2</td> \n",
+       "  <th>Time:</th>                 <td>16:31:13</td>     <th>  Log-Likelihood:    </th> <td>  1142.2</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  6252</td>      <th>  AIC:               </th> <td>  -2266.</td> \n",
@@ -207,7 +207,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.941\n",
        "Method:                 Least Squares   F-statistic:                 1.251e+04\n",
        "Date:                Tue, 23 May 2023   Prob (F-statistic):               0.00\n",
-       "Time:                        10:47:44   Log-Likelihood:                 1142.2\n",
+       "Time:                        16:31:13   Log-Likelihood:                 1142.2\n",
        "No. Observations:                6252   AIC:                            -2266.\n",
        "Df Residuals:                    6243   BIC:                            -2206.\n",
        "Df Model:                           8                                         \n",
@@ -250,49 +250,387 @@
    "id": "3a62ea70",
    "metadata": {},
    "source": [
-    "### OLS"
+    "### OLS\n",
+    "\n",
+    "```Python\n",
+    "X = DB5[features].apply(np.abs).apply(np.log)\n",
+    "X.insert(0,\"intercept\",np.ones(len(X))); X = X.to_numpy()\n",
+    "y = DB5[[\"TAUTH\"]].apply(np.log).to_numpy()\n",
+    "\n",
+    "B = np.matmul( np.linalg.inv( np.matmul(X.T,X) ) ,  np.matmul(X.T,y))\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d7d63f2",
+   "metadata": {},
+   "source": [
+    "### Without Intercept\n",
+    "\n",
+    "[Notes based on PYTHON FOR DATA SCIENCE](https://www.pythonfordatascience.org/linear-regression-python/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd9403b2",
+   "metadata": {},
+   "source": [
+    "### log( abs( X ) ) | With Spherical DS | DB5"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "426603f3",
+   "id": "47281761",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>eigenvalues</th>\n",
+       "      <th>CI</th>\n",
+       "      <th>VIF</th>\n",
+       "      <th>VD</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>IP</th>\n",
+       "      <td>0.993224</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>17.088996</td>\n",
+       "      <td>0.637650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BT</th>\n",
+       "      <td>0.240220</td>\n",
+       "      <td>3.842289</td>\n",
+       "      <td>16.498704</td>\n",
+       "      <td>0.154221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NEL</th>\n",
+       "      <td>0.173599</td>\n",
+       "      <td>7.183002</td>\n",
+       "      <td>41.686928</td>\n",
+       "      <td>0.111451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PLTH</th>\n",
+       "      <td>0.085816</td>\n",
+       "      <td>8.639261</td>\n",
+       "      <td>26.961506</td>\n",
+       "      <td>0.055094</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RGEO</th>\n",
+       "      <td>0.002671</td>\n",
+       "      <td>12.800543</td>\n",
+       "      <td>62.618108</td>\n",
+       "      <td>0.001715</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KAREA</th>\n",
+       "      <td>0.030393</td>\n",
+       "      <td>19.202273</td>\n",
+       "      <td>24.294116</td>\n",
+       "      <td>0.019512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EPS</th>\n",
+       "      <td>0.021643</td>\n",
+       "      <td>28.966310</td>\n",
+       "      <td>198.242717</td>\n",
+       "      <td>0.013895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MEFF</th>\n",
+       "      <td>0.010065</td>\n",
+       "      <td>56.758544</td>\n",
+       "      <td>16.823753</td>\n",
+       "      <td>0.006462</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       eigenvalues         CI         VIF        VD\n",
+       "IP        0.993224   1.000000   17.088996  0.637650\n",
+       "BT        0.240220   3.842289   16.498704  0.154221\n",
+       "NEL       0.173599   7.183002   41.686928  0.111451\n",
+       "PLTH      0.085816   8.639261   26.961506  0.055094\n",
+       "RGEO      0.002671  12.800543   62.618108  0.001715\n",
+       "KAREA     0.030393  19.202273   24.294116  0.019512\n",
+       "EPS       0.021643  28.966310  198.242717  0.013895\n",
+       "MEFF      0.010065  56.758544   16.823753  0.006462"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "X = DB5[features].apply(np.abs).apply(np.log)\n",
-    "X.insert(0,\"intercept\",np.ones(len(X))); X = X.to_numpy()\n",
-    "y = DB5[[\"TAUTH\"]].apply(np.log).to_numpy()"
+    "X = DB5[features].apply(np.abs).apply(np.log).to_numpy()\n",
+    "tokamakTK.get_multicollinearity_info(X, features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c36e1e16",
+   "metadata": {},
+   "source": [
+    "### X | With Spherical DS | DB5"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "65de56c6",
+   "id": "019a1d23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>eigenvalues</th>\n",
+       "      <th>CI</th>\n",
+       "      <th>VIF</th>\n",
+       "      <th>VD</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>IP</th>\n",
+       "      <td>30.565286</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.412519</td>\n",
+       "      <td>0.675419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BT</th>\n",
+       "      <td>10.850580</td>\n",
+       "      <td>2.907415</td>\n",
+       "      <td>2.401006</td>\n",
+       "      <td>0.239772</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NEL</th>\n",
+       "      <td>2.310020</td>\n",
+       "      <td>7.030995</td>\n",
+       "      <td>6.607237</td>\n",
+       "      <td>0.051046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PLTH</th>\n",
+       "      <td>1.296787</td>\n",
+       "      <td>9.544358</td>\n",
+       "      <td>6.450341</td>\n",
+       "      <td>0.028656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RGEO</th>\n",
+       "      <td>0.120138</td>\n",
+       "      <td>10.855804</td>\n",
+       "      <td>34.628852</td>\n",
+       "      <td>0.002655</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KAREA</th>\n",
+       "      <td>0.076445</td>\n",
+       "      <td>37.076629</td>\n",
+       "      <td>90.215626</td>\n",
+       "      <td>0.001689</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EPS</th>\n",
+       "      <td>0.003641</td>\n",
+       "      <td>59.892198</td>\n",
+       "      <td>27.303791</td>\n",
+       "      <td>0.000080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MEFF</th>\n",
+       "      <td>0.030912</td>\n",
+       "      <td>190.269981</td>\n",
+       "      <td>48.199571</td>\n",
+       "      <td>0.000683</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       eigenvalues          CI        VIF        VD\n",
+       "IP       30.565286    1.000000   3.412519  0.675419\n",
+       "BT       10.850580    2.907415   2.401006  0.239772\n",
+       "NEL       2.310020    7.030995   6.607237  0.051046\n",
+       "PLTH      1.296787    9.544358   6.450341  0.028656\n",
+       "RGEO      0.120138   10.855804  34.628852  0.002655\n",
+       "KAREA     0.076445   37.076629  90.215626  0.001689\n",
+       "EPS       0.003641   59.892198  27.303791  0.000080\n",
+       "MEFF      0.030912  190.269981  48.199571  0.000683"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "B = np.matmul( np.linalg.inv( np.matmul(X.T,X) ) ,  np.matmul(X.T,y))"
+    "X = DB5[features].to_numpy()\n",
+    "tokamakTK.get_multicollinearity_info(X, features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74e86486",
+   "metadata": {},
+   "source": [
+    "### X | With Spherical DS | Decreasing DB5 + DB2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b745305c",
+   "id": "5d136e32",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>eigenvalues</th>\n",
+       "      <th>CI</th>\n",
+       "      <th>VIF</th>\n",
+       "      <th>VD</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>IP</th>\n",
+       "      <td>21.516647</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.631923</td>\n",
+       "      <td>0.518633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BT</th>\n",
+       "      <td>15.615864</td>\n",
+       "      <td>2.514931</td>\n",
+       "      <td>1.681189</td>\n",
+       "      <td>0.376402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NEL</th>\n",
+       "      <td>2.695337</td>\n",
+       "      <td>4.766412</td>\n",
+       "      <td>4.701631</td>\n",
+       "      <td>0.064968</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PLTH</th>\n",
+       "      <td>1.438796</td>\n",
+       "      <td>8.187015</td>\n",
+       "      <td>7.067288</td>\n",
+       "      <td>0.034680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RGEO</th>\n",
+       "      <td>0.094818</td>\n",
+       "      <td>10.013100</td>\n",
+       "      <td>31.690852</td>\n",
+       "      <td>0.002285</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KAREA</th>\n",
+       "      <td>0.077863</td>\n",
+       "      <td>34.808049</td>\n",
+       "      <td>54.091793</td>\n",
+       "      <td>0.001877</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EPS</th>\n",
+       "      <td>0.004347</td>\n",
+       "      <td>46.704140</td>\n",
+       "      <td>21.126279</td>\n",
+       "      <td>0.000105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MEFF</th>\n",
+       "      <td>0.043563</td>\n",
+       "      <td>145.070718</td>\n",
+       "      <td>42.795358</td>\n",
+       "      <td>0.001050</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([[-2.51853114],\n",
-       "       [ 1.13432954],\n",
-       "       [ 0.0723885 ],\n",
-       "       [ 0.17489654],\n",
-       "       [-0.6827009 ],\n",
-       "       [ 1.44790891],\n",
-       "       [ 0.28022651],\n",
-       "       [ 0.06355416],\n",
-       "       [ 0.21401782]])"
+       "       eigenvalues          CI        VIF        VD\n",
+       "IP       21.516647    1.000000   2.631923  0.518633\n",
+       "BT       15.615864    2.514931   1.681189  0.376402\n",
+       "NEL       2.695337    4.766412   4.701631  0.064968\n",
+       "PLTH      1.438796    8.187015   7.067288  0.034680\n",
+       "RGEO      0.094818   10.013100  31.690852  0.002285\n",
+       "KAREA     0.077863   34.808049  54.091793  0.001877\n",
+       "EPS       0.004347   46.704140  21.126279  0.000105\n",
+       "MEFF      0.043563  145.070718  42.795358  0.001050"
       ]
      },
      "execution_count": 8,
@@ -301,13 +639,138 @@
     }
    ],
    "source": [
-    "B"
+    "X = DB5[ (DB5.label.isin([1])) |  (DB5.id.isin(DB2.id.values)) ][features].to_numpy()\n",
+    "tokamakTK.get_multicollinearity_info(X, features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c1b363a",
+   "metadata": {},
+   "source": [
+    "### X | With Spherical DS | Unaffected DB5 + DB2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "307e47b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>eigenvalues</th>\n",
+       "      <th>CI</th>\n",
+       "      <th>VIF</th>\n",
+       "      <th>VD</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>IP</th>\n",
+       "      <td>34.176351</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.234462</td>\n",
+       "      <td>0.687963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BT</th>\n",
+       "      <td>11.502419</td>\n",
+       "      <td>2.846503</td>\n",
+       "      <td>2.235422</td>\n",
+       "      <td>0.231541</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NEL</th>\n",
+       "      <td>2.461138</td>\n",
+       "      <td>6.757870</td>\n",
+       "      <td>6.482577</td>\n",
+       "      <td>0.049542</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PLTH</th>\n",
+       "      <td>1.304755</td>\n",
+       "      <td>9.052530</td>\n",
+       "      <td>5.999891</td>\n",
+       "      <td>0.026264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RGEO</th>\n",
+       "      <td>0.126331</td>\n",
+       "      <td>11.308441</td>\n",
+       "      <td>33.311640</td>\n",
+       "      <td>0.002543</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KAREA</th>\n",
+       "      <td>0.069598</td>\n",
+       "      <td>38.234495</td>\n",
+       "      <td>77.582911</td>\n",
+       "      <td>0.001401</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EPS</th>\n",
+       "      <td>0.003654</td>\n",
+       "      <td>62.161721</td>\n",
+       "      <td>26.462298</td>\n",
+       "      <td>0.000074</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MEFF</th>\n",
+       "      <td>0.033348</td>\n",
+       "      <td>190.792680</td>\n",
+       "      <td>53.209751</td>\n",
+       "      <td>0.000671</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       eigenvalues          CI        VIF        VD\n",
+       "IP       34.176351    1.000000   3.234462  0.687963\n",
+       "BT       11.502419    2.846503   2.235422  0.231541\n",
+       "NEL       2.461138    6.757870   6.482577  0.049542\n",
+       "PLTH      1.304755    9.052530   5.999891  0.026264\n",
+       "RGEO      0.126331   11.308441  33.311640  0.002543\n",
+       "KAREA     0.069598   38.234495  77.582911  0.001401\n",
+       "EPS       0.003654   62.161721  26.462298  0.000074\n",
+       "MEFF      0.033348  190.792680  53.209751  0.000671"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = DB5[ DB5.label.isin([0]) ][features].to_numpy()\n",
+    "tokamakTK.get_multicollinearity_info(X, features)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c28493d3",
+   "id": "640fc6af",
    "metadata": {},
    "outputs": [],
    "source": []
