--- a/Multicollinearity/Condition Number and Variance Decomposition.ipynb
+++ b/Multicollinearity/Condition Number and Variance Decomposition.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d7d63f2",
+   "id": "3067976d",
    "metadata": {},
    "source": [
     "### Without Intercept\n",
@@ -273,16 +273,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd9403b2",
+   "id": "c0e218c1",
    "metadata": {},
    "source": [
-    "### log( abs( X ) ) | With Spherical DS | DB5"
+    "### log( abs( X ) ) | With Spherical DS | complete DB5"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "47281761",
+   "id": "6897a771",
    "metadata": {},
    "outputs": [
     {
@@ -397,16 +397,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c36e1e16",
+   "id": "727f0441",
    "metadata": {},
    "source": [
-    "### X | With Spherical DS | DB5"
+    "### X | With Spherical DS | complete DB5"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "019a1d23",
+   "id": "24771917",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74e86486",
+   "id": "f6ae913a",
    "metadata": {},
    "source": [
     "### X | With Spherical DS | Decreasing DB5 + DB2"
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5d136e32",
+   "id": "108b4bf1",
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c1b363a",
+   "id": "b2384b65",
    "metadata": {},
    "source": [
     "### X | With Spherical DS | Unaffected DB5 + DB2"
@@ -654,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "307e47b9",
+   "id": "2cdd686a",
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "640fc6af",
+   "id": "68b8bb6e",
    "metadata": {},
    "outputs": [],
    "source": []
