--- a/Model Comparison /F-test.ipynb
+++ b/Model Comparison /F-test.ipynb
@@ -22,27 +22,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 3,
    "id": "c8cce4e3",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'get_regression' from 'tokamakTK' (/home/kchinas/Documents/Universiteit/Thesis/kGitHub/FUSION-EP-Master-Thesis/Model Comparison /../tokamakTK.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[118], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtokamakTK\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtokamakTK\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_regression\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m \n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'get_regression' from 'tokamakTK' (/home/kchinas/Documents/Universiteit/Thesis/kGitHub/FUSION-EP-Master-Thesis/Model Comparison /../tokamakTK.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('../')\n",
     "import tokamakTK\n",
-    "from tokamakTK import get_regression\n",
+    "from tokamakTK import get_ECT_regression\n",
     "\n",
     "import numpy as np \n",
     "import pandas as pd\n",
@@ -52,8 +40,9 @@
     "import statsmodels.api as sm\n",
     "import matplotlib.patches as mpatches\n",
     "\n",
-    "from collections import Counter\n",
     "\n",
+    "from collections import Counter\n",
+    "from scipy.stats import f\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.cluster import KMeans\n",
     "from yellowbrick.cluster import KElbowVisualizer\n",
@@ -70,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 2,
    "id": "f2d4efad",
    "metadata": {},
    "outputs": [
