--- a/Model Comparison /ANOVA | Partial F-Test for Nested Models.ipynb
+++ b/Model Comparison /ANOVA | Partial F-Test for Nested Models.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "3ac1ab8f",
    "metadata": {},
    "outputs": [
@@ -57,14 +57,14 @@
      "text": [
       "  Subset that decrease alpha-R to 0.6357\n",
       "--------\n",
-      "23.45% affected alpha_R\n",
-      "76.55% did not affect alpha_R\n",
+      "24.37% affected alpha_R\n",
+      "75.63% did not affect alpha_R\n",
       "\n",
       "\n",
       "  Subset that decrease alpha-R to 0.9998\n",
       "--------\n",
-      "9.88% affected alpha_R\n",
-      "90.12% did not affect alpha_R\n"
+      "10.27% affected alpha_R\n",
+      "89.73% did not affect alpha_R\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
     "DB5 = DB5[DB5[\"PHASE\"].isin(['HGELM', 'HSELM', 'HGELMH', 'HSELMH'])]\n",
     "\n",
     "# Removing Spherical TOKAMAKS\n",
-    "#DB5 = DB5[~DB5[\"TOK\"].isin(['START','MAST','NSTX'])]\n",
+    "DB5 = DB5[~DB5[\"TOK\"].isin(['START','MAST','NSTX'])]\n",
     "\n",
     "# There is two shots from DB2P8 missing in DB5\n",
     "missing_shots = DB2[~DB2.id.isin( DB5.id.values )].reset_index(drop=True)\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "c6b46a32",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "492586ea",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "899613a7",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "b8a6d975",
    "metadata": {},
    "outputs": [
@@ -229,162 +229,162 @@
        "      <th>IP</th>\n",
        "      <td>961.58446</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>4809.57120</td>\n",
+       "      <td>5181.43523</td>\n",
        "      <td>0.00000</td>\n",
-       "      <td>4165.11371</td>\n",
+       "      <td>4152.28514</td>\n",
        "      <td>0.00000</td>\n",
-       "      <td>2370.14462</td>\n",
+       "      <td>2270.72499</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2149.89865</td>\n",
+       "      <td>2047.64264</td>\n",
        "      <td>0.00000</td>\n",
-       "      <td>3757.01427</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>3958.40000</td>\n",
+       "      <td>0.00000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BT</th>\n",
        "      <td>138.99369</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>25.79122</td>\n",
+       "      <td>4.79280</td>\n",
+       "      <td>0.02862</td>\n",
+       "      <td>0.10283</td>\n",
+       "      <td>0.74848</td>\n",
+       "      <td>167.09337</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>25.81100</td>\n",
        "      <td>0.00000</td>\n",
-       "      <td>1.01125</td>\n",
-       "      <td>0.31469</td>\n",
-       "      <td>300.46163</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>18.88540</td>\n",
-       "      <td>0.00001</td>\n",
-       "      <td>69.15326</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>3.12710</td>\n",
+       "      <td>0.07706</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>NEL</th>\n",
        "      <td>494.27457</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>332.97200</td>\n",
+       "      <td>231.23438</td>\n",
        "      <td>0.00000</td>\n",
-       "      <td>85.68474</td>\n",
+       "      <td>99.34833</td>\n",
        "      <td>0.00000</td>\n",
-       "      <td>1971.23255</td>\n",
+       "      <td>1770.86448</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.22465</td>\n",
-       "      <td>0.26859</td>\n",
-       "      <td>752.87729</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.32319</td>\n",
+       "      <td>0.25017</td>\n",
+       "      <td>596.25357</td>\n",
+       "      <td>0.00000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PLTH</th>\n",
        "      <td>2674.96819</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>10024.60240</td>\n",
+       "      <td>9305.98576</td>\n",
        "      <td>0.00000</td>\n",
-       "      <td>2017.39751</td>\n",
+       "      <td>2038.38644</td>\n",
        "      <td>0.00000</td>\n",
-       "      <td>14937.76647</td>\n",
+       "      <td>13804.40093</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1609.65100</td>\n",
+       "      <td>1634.31731</td>\n",
        "      <td>0.00000</td>\n",
-       "      <td>11206.24582</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>10291.97609</td>\n",
+       "      <td>0.00000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RGEO</th>\n",
        "      <td>2022.42722</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>3221.36266</td>\n",
+       "      <td>2092.03540</td>\n",
        "      <td>0.00000</td>\n",
-       "      <td>294.37717</td>\n",
+       "      <td>236.78331</td>\n",
        "      <td>0.00000</td>\n",
-       "      <td>7450.69348</td>\n",
+       "      <td>5458.33241</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>471.16323</td>\n",
+       "      <td>457.26387</td>\n",
        "      <td>0.00000</td>\n",
-       "      <td>4404.12374</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2987.74270</td>\n",
+       "      <td>0.00000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>KAREA</th>\n",
        "      <td>94.66733</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>94.69404</td>\n",
+       "      <td>13.33678</td>\n",
+       "      <td>0.00026</td>\n",
+       "      <td>0.76233</td>\n",
+       "      <td>0.38268</td>\n",
+       "      <td>240.41914</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.94685</td>\n",
+       "      <td>0.00033</td>\n",
+       "      <td>44.85694</td>\n",
        "      <td>0.00000</td>\n",
-       "      <td>0.00198</td>\n",
-       "      <td>0.96452</td>\n",
-       "      <td>350.35744</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>10.44855</td>\n",
-       "      <td>0.00125</td>\n",
-       "      <td>144.62544</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>EPS</th>\n",
        "      <td>131.13720</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.95960</td>\n",
-       "      <td>0.08542</td>\n",
-       "      <td>136.93138</td>\n",
+       "      <td>0.13161</td>\n",
+       "      <td>0.71679</td>\n",
+       "      <td>145.32482</td>\n",
        "      <td>0.00000</td>\n",
-       "      <td>507.59434</td>\n",
+       "      <td>375.20589</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>11.19618</td>\n",
-       "      <td>0.00084</td>\n",
-       "      <td>77.06965</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>13.62917</td>\n",
+       "      <td>0.00023</td>\n",
+       "      <td>37.33309</td>\n",
+       "      <td>0.00000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MEFF</th>\n",
        "      <td>36.50700</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>157.27391</td>\n",
+       "      <td>192.29798</td>\n",
        "      <td>0.00000</td>\n",
-       "      <td>25.50366</td>\n",
+       "      <td>27.40806</td>\n",
        "      <td>0.00000</td>\n",
-       "      <td>182.72516</td>\n",
+       "      <td>188.62652</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>15.86038</td>\n",
-       "      <td>0.00007</td>\n",
-       "      <td>179.70021</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>15.54385</td>\n",
+       "      <td>0.00008</td>\n",
+       "      <td>210.30714</td>\n",
+       "      <td>0.00000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      F_db2  P_db2        F_db5    P_db5   F_d0.6357  \\\n",
-       "removed feature                                                        \n",
-       "IP                961.58446    0.0   4809.57120  0.00000  4165.11371   \n",
-       "BT                138.99369    0.0     25.79122  0.00000     1.01125   \n",
-       "NEL               494.27457    0.0    332.97200  0.00000    85.68474   \n",
-       "PLTH             2674.96819    0.0  10024.60240  0.00000  2017.39751   \n",
-       "RGEO             2022.42722    0.0   3221.36266  0.00000   294.37717   \n",
-       "KAREA              94.66733    0.0     94.69404  0.00000     0.00198   \n",
-       "EPS               131.13720    0.0      2.95960  0.08542   136.93138   \n",
-       "MEFF               36.50700    0.0    157.27391  0.00000    25.50366   \n",
+       "                      F_db2  P_db2       F_db5    P_db5   F_d0.6357  \\\n",
+       "removed feature                                                       \n",
+       "IP                961.58446    0.0  5181.43523  0.00000  4152.28514   \n",
+       "BT                138.99369    0.0     4.79280  0.02862     0.10283   \n",
+       "NEL               494.27457    0.0   231.23438  0.00000    99.34833   \n",
+       "PLTH             2674.96819    0.0  9305.98576  0.00000  2038.38644   \n",
+       "RGEO             2022.42722    0.0  2092.03540  0.00000   236.78331   \n",
+       "KAREA              94.66733    0.0    13.33678  0.00026     0.76233   \n",
+       "EPS               131.13720    0.0     0.13161  0.71679   145.32482   \n",
+       "MEFF               36.50700    0.0   192.29798  0.00000    27.40806   \n",
        "\n",
        "                 P_d0.6357    F_u0.6357  P_u0.6357   F_d0.9998  P_d0.9998  \\\n",
        "removed feature                                                             \n",
-       "IP                 0.00000   2370.14462        0.0  2149.89865    0.00000   \n",
-       "BT                 0.31469    300.46163        0.0    18.88540    0.00001   \n",
-       "NEL                0.00000   1971.23255        0.0     1.22465    0.26859   \n",
-       "PLTH               0.00000  14937.76647        0.0  1609.65100    0.00000   \n",
-       "RGEO               0.00000   7450.69348        0.0   471.16323    0.00000   \n",
-       "KAREA              0.96452    350.35744        0.0    10.44855    0.00125   \n",
-       "EPS                0.00000    507.59434        0.0    11.19618    0.00084   \n",
-       "MEFF               0.00000    182.72516        0.0    15.86038    0.00007   \n",
+       "IP                 0.00000   2270.72499        0.0  2047.64264    0.00000   \n",
+       "BT                 0.74848    167.09337        0.0    25.81100    0.00000   \n",
+       "NEL                0.00000   1770.86448        0.0     1.32319    0.25017   \n",
+       "PLTH               0.00000  13804.40093        0.0  1634.31731    0.00000   \n",
+       "RGEO               0.00000   5458.33241        0.0   457.26387    0.00000   \n",
+       "KAREA              0.38268    240.41914        0.0    12.94685    0.00033   \n",
+       "EPS                0.00000    375.20589        0.0    13.62917    0.00023   \n",
+       "MEFF               0.00000    188.62652        0.0    15.54385    0.00008   \n",
        "\n",
        "                   F_u0.9998  P_u0.9998  \n",
        "removed feature                          \n",
-       "IP                3757.01427        0.0  \n",
-       "BT                  69.15326        0.0  \n",
-       "NEL                752.87729        0.0  \n",
-       "PLTH             11206.24582        0.0  \n",
-       "RGEO              4404.12374        0.0  \n",
-       "KAREA              144.62544        0.0  \n",
-       "EPS                 77.06965        0.0  \n",
-       "MEFF               179.70021        0.0  "
+       "IP                3958.40000    0.00000  \n",
+       "BT                   3.12710    0.07706  \n",
+       "NEL                596.25357    0.00000  \n",
+       "PLTH             10291.97609    0.00000  \n",
+       "RGEO              2987.74270    0.00000  \n",
+       "KAREA               44.85694    0.00000  \n",
+       "EPS                 37.33309    0.00000  \n",
+       "MEFF               210.30714    0.00000  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,6 +397,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4bf6f5f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99b7c686",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c67fbffe",
    "metadata": {},
    "outputs": [],
    "source": []
