--- a/Model Comparison /ANOVA | Partial F-Test for Nested Models.ipynb
+++ b/Model Comparison /ANOVA | Partial F-Test for Nested Models.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "id": "bf03f1a6",
    "metadata": {},
    "outputs": [],
@@ -41,13 +41,13 @@
     "fig_path = \"../../../LATEX/Latex Images/\"\n",
     "\n",
     "plt.rc('font',family = 'serif')\n",
-    "\n",
-    "features = ['IP', 'BT', 'NEL', 'PLTH', 'RGEO', 'KAREA', 'EPS', 'MEFF']"
+    "# ['IP', 'BT', 'NEL', 'PLTH', 'RGEO', 'KAREA', 'EPS', 'MEFF']\n",
+    "features = ['IP', 'NEL', 'PLTH', 'RGEO', 'EPS', 'MEFF']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "id": "3ac1ab8f",
    "metadata": {},
    "outputs": [
@@ -57,14 +57,14 @@
      "text": [
       "  Subset that decrease alpha-R to 0.6357\n",
       "--------\n",
-      "24.37% affected alpha_R\n",
-      "75.63% did not affect alpha_R\n",
+      "23.45% affected alpha_R\n",
+      "76.55% did not affect alpha_R\n",
       "\n",
       "\n",
       "  Subset that decrease alpha-R to 0.9998\n",
       "--------\n",
-      "10.27% affected alpha_R\n",
-      "89.73% did not affect alpha_R\n"
+      "9.88% affected alpha_R\n",
+      "90.12% did not affect alpha_R\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
     "DB5 = DB5[DB5[\"PHASE\"].isin(['HGELM', 'HSELM', 'HGELMH', 'HSELMH'])]\n",
     "\n",
     "# Removing Spherical TOKAMAKS\n",
-    "DB5 = DB5[~DB5[\"TOK\"].isin(['START','MAST','NSTX'])]\n",
+    "#DB5 = DB5[~DB5[\"TOK\"].isin(['START','MAST','NSTX'])]\n",
     "\n",
     "# There is two shots from DB2P8 missing in DB5\n",
     "missing_shots = DB2[~DB2.id.isin( DB5.id.values )].reset_index(drop=True)\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "id": "c6b46a32",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "id": "492586ea",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "id": "899613a7",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "id": "b8a6d975",
    "metadata": {},
    "outputs": [
@@ -235,153 +235,119 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>IP</th>\n",
-       "      <td>961.584</td>\n",
+       "      <td>1249.466</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>5181.435</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>4152.285</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>2270.725</td>\n",
+       "      <td>3942.077</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2047.643</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>3958.400</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BT</th>\n",
-       "      <td>138.994</td>\n",
+       "      <td>2882.359</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>4.793</td>\n",
-       "      <td>0.029</td>\n",
-       "      <td>0.103</td>\n",
-       "      <td>0.748</td>\n",
-       "      <td>167.093</td>\n",
+       "      <td>3309.297</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>25.811</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>3.127</td>\n",
-       "      <td>0.077</td>\n",
+       "      <td>1835.543</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3463.845</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>NEL</th>\n",
-       "      <td>494.275</td>\n",
+       "      <td>212.009</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>231.234</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>99.348</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>1770.864</td>\n",
+       "      <td>138.505</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.323</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>596.254</td>\n",
-       "      <td>0.000</td>\n",
+       "      <td>28.650</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>746.469</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.588</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>289.091</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PLTH</th>\n",
-       "      <td>2674.968</td>\n",
+       "      <td>949.402</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>9305.986</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>2038.386</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>13804.401</td>\n",
+       "      <td>3467.893</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1634.317</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>10291.976</td>\n",
-       "      <td>0.000</td>\n",
+       "      <td>763.190</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5056.318</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>585.624</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3850.336</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RGEO</th>\n",
-       "      <td>2022.427</td>\n",
+       "      <td>715.764</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2092.035</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>236.783</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>5458.332</td>\n",
+       "      <td>1401.616</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>457.264</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>2987.743</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>KAREA</th>\n",
-       "      <td>94.667</td>\n",
+       "      <td>129.401</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>13.337</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.762</td>\n",
-       "      <td>0.383</td>\n",
-       "      <td>240.419</td>\n",
+       "      <td>3007.085</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>12.947</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>44.857</td>\n",
-       "      <td>0.000</td>\n",
+       "      <td>180.144</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1850.355</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>EPS</th>\n",
-       "      <td>131.137</td>\n",
+       "      <td>58.315</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.132</td>\n",
-       "      <td>0.717</td>\n",
-       "      <td>145.325</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>375.206</td>\n",
+       "      <td>33.756</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>13.629</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>37.333</td>\n",
-       "      <td>0.000</td>\n",
+       "      <td>103.552</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>213.779</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>30.362</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>56.642</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MEFF</th>\n",
-       "      <td>36.507</td>\n",
+       "      <td>63.486</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>192.298</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>27.408</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>188.627</td>\n",
+       "      <td>99.423</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>15.544</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>210.307</td>\n",
-       "      <td>0.000</td>\n",
+       "      <td>9.639</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>229.478</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.948</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>131.721</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            F_DB2  P_DB2     F_DB5  P_DB5   F_d0.64  P_d0.64    F_u0.64  \\\n",
-       "removed                                                                   \n",
-       "IP        961.584    0.0  5181.435  0.000  4152.285    0.000   2270.725   \n",
-       "BT        138.994    0.0     4.793  0.029     0.103    0.748    167.093   \n",
-       "NEL       494.275    0.0   231.234  0.000    99.348    0.000   1770.864   \n",
-       "PLTH     2674.968    0.0  9305.986  0.000  2038.386    0.000  13804.401   \n",
-       "RGEO     2022.427    0.0  2092.035  0.000   236.783    0.000   5458.332   \n",
-       "KAREA      94.667    0.0    13.337  0.000     0.762    0.383    240.419   \n",
-       "EPS       131.137    0.0     0.132  0.717   145.325    0.000    375.206   \n",
-       "MEFF       36.507    0.0   192.298  0.000    27.408    0.000    188.627   \n",
+       "            F_DB2  P_DB2     F_DB5  P_DB5   F_d0.64  P_d0.64   F_u0.64  \\\n",
+       "removed                                                                  \n",
+       "IP       1249.466    0.0  3942.077    0.0  2882.359      0.0  3309.297   \n",
+       "NEL       212.009    0.0   138.505    0.0    28.650      0.0   746.469   \n",
+       "PLTH      949.402    0.0  3467.893    0.0   763.190      0.0  5056.318   \n",
+       "RGEO      715.764    0.0  1401.616    0.0   129.401      0.0  3007.085   \n",
+       "EPS        58.315    0.0    33.756    0.0   103.552      0.0   213.779   \n",
+       "MEFF       63.486    0.0    99.423    0.0     9.639      0.0   229.478   \n",
        "\n",
-       "         P_u0.64   F_d0.99  P_d0.99    F_u0.99  P_u0.99  \n",
-       "removed                                                  \n",
-       "IP           0.0  2047.643     0.00   3958.400    0.000  \n",
-       "BT           0.0    25.811     0.00      3.127    0.077  \n",
-       "NEL          0.0     1.323     0.25    596.254    0.000  \n",
-       "PLTH         0.0  1634.317     0.00  10291.976    0.000  \n",
-       "RGEO         0.0   457.264     0.00   2987.743    0.000  \n",
-       "KAREA        0.0    12.947     0.00     44.857    0.000  \n",
-       "EPS          0.0    13.629     0.00     37.333    0.000  \n",
-       "MEFF         0.0    15.544     0.00    210.307    0.000  "
+       "         P_u0.64   F_d0.99  P_d0.99   F_u0.99  P_u0.99  \n",
+       "removed                                                 \n",
+       "IP           0.0  1835.543      0.0  3463.845      0.0  \n",
+       "NEL          0.0     6.588      0.0   289.091      0.0  \n",
+       "PLTH         0.0   585.624      0.0  3850.336      0.0  \n",
+       "RGEO         0.0   180.144      0.0  1850.355      0.0  \n",
+       "EPS          0.0    30.362      0.0    56.642      0.0  \n",
+       "MEFF         0.0    12.948      0.0   131.721      0.0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "id": "4bf6f5f8",
    "metadata": {},
    "outputs": [],
@@ -402,8 +368,263 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "99b7c686",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>F_DB2</th>\n",
+       "      <th>P_DB2</th>\n",
+       "      <th>F_DB5</th>\n",
+       "      <th>P_DB5</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>removed</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>IP</th>\n",
+       "      <td>1249.466</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3942.077</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NEL</th>\n",
+       "      <td>212.009</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>138.505</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PLTH</th>\n",
+       "      <td>949.402</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3467.893</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RGEO</th>\n",
+       "      <td>715.764</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1401.616</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EPS</th>\n",
+       "      <td>58.315</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>33.756</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MEFF</th>\n",
+       "      <td>63.486</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>99.423</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            F_DB2  P_DB2     F_DB5  P_DB5\n",
+       "removed                                  \n",
+       "IP       1249.466    0.0  3942.077    0.0\n",
+       "NEL       212.009    0.0   138.505    0.0\n",
+       "PLTH      949.402    0.0  3467.893    0.0\n",
+       "RGEO      715.764    0.0  1401.616    0.0\n",
+       "EPS        58.315    0.0    33.756    0.0\n",
+       "MEFF       63.486    0.0    99.423    0.0"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TESTS[TESTS.columns[:4]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "c67fbffe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>F_d0.64</th>\n",
+       "      <th>P_d0.64</th>\n",
+       "      <th>F_u0.64</th>\n",
+       "      <th>P_u0.64</th>\n",
+       "      <th>F_d0.99</th>\n",
+       "      <th>P_d0.99</th>\n",
+       "      <th>F_u0.99</th>\n",
+       "      <th>P_u0.99</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>removed</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>IP</th>\n",
+       "      <td>2882.359</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3309.297</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1835.543</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3463.845</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NEL</th>\n",
+       "      <td>28.650</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>746.469</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.588</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>289.091</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PLTH</th>\n",
+       "      <td>763.190</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5056.318</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>585.624</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3850.336</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RGEO</th>\n",
+       "      <td>129.401</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3007.085</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>180.144</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1850.355</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EPS</th>\n",
+       "      <td>103.552</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>213.779</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>30.362</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>56.642</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MEFF</th>\n",
+       "      <td>9.639</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>229.478</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.948</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>131.721</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          F_d0.64  P_d0.64   F_u0.64  P_u0.64   F_d0.99  P_d0.99   F_u0.99  \\\n",
+       "removed                                                                      \n",
+       "IP       2882.359      0.0  3309.297      0.0  1835.543      0.0  3463.845   \n",
+       "NEL        28.650      0.0   746.469      0.0     6.588      0.0   289.091   \n",
+       "PLTH      763.190      0.0  5056.318      0.0   585.624      0.0  3850.336   \n",
+       "RGEO      129.401      0.0  3007.085      0.0   180.144      0.0  1850.355   \n",
+       "EPS       103.552      0.0   213.779      0.0    30.362      0.0    56.642   \n",
+       "MEFF        9.639      0.0   229.478      0.0    12.948      0.0   131.721   \n",
+       "\n",
+       "         P_u0.99  \n",
+       "removed           \n",
+       "IP           0.0  \n",
+       "NEL          0.0  \n",
+       "PLTH         0.0  \n",
+       "RGEO         0.0  \n",
+       "EPS          0.0  \n",
+       "MEFF         0.0  "
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TESTS[TESTS.columns[4:]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bf071d5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -411,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c67fbffe",
+   "id": "d1808f8f",
    "metadata": {},
    "outputs": [],
    "source": []
